<resources>
    <string name="app_name">KOL-appen</string>
    <string name="welcome">Välkommen!</string>
    <string name="firstname">Förnamn</string>
    <string name="familyname">Efternamn</string>
    <string name="dateOfBirth">Person nummer</string>
    <string name="man">Man</string>
    <string name="woman">Kvinna</string>
    <string name="smoking">Röker</string>
    <string name="save">SPARA OCH GÅ VIDARE!</string>
    <string name="inputExercis">LÄGG IN ÖVNING!</string>
    <string name="addImage">Välj bild</string>
    <string name="addMusic">Välj musik</string>
    <string name="addNumber">Antal repitioner</string>
    <string name="addTime">Tid</string>
    <string name="saveExercis">Spar</string>
    <string name="finish">Klar!</string>

    <string name="personalPref">Användarinfo</string>
    <string name="exercisesInput">Träningsformulär</string>
    <string name="main">Startsida</string>
    <string name="statistics">Statistik</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add__exercis">Lägg till övning!</string>
    <string name="showExercis">Olika Aktiviteter</string>
    <string name="inputHeader">Skriv in rubrik</string>
    <string name="categoryHeader">Välj kategori</string>
    <string name="title_activity_exercis_details">Utförande av övning</string>
    <string name="title_activity_personal_pref">Användarinformation</string>
    <string name="title_activity_statistics">Statistik</string>
    <string name="title_activity_star">star</string>
    <string name="title_activity_point">Point</string>
</resources>
