<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.idnert.kol_app.LayoutPersonalPref">

    <TextView android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:typeface="sans"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical|center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:id="@+id/textView2"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/firstname"
        android:id="@+id/tvFirstname"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstname"
        android:layout_below="@+id/tvFirstname"
        android:layout_alignParentStart="true"
        android:hint="Skriv in förnamn"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/cBoxSmoking" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/familyname"
        android:id="@+id/tvlastname"
        android:paddingLeft="10dp"
        android:layout_below="@+id/firstname"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastname"
        android:hint="Skriv in efternamn"
        android:layout_below="@+id/tvlastname"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/cBoxSmoking" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dateOfBirth"
        android:id="@+id/textView"
        android:paddingLeft="10dp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/lastname"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edPersonno"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:hint="år-mån-dag" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smoking"
        android:id="@+id/cBoxSmoking"
        android:layout_alignBottom="@+id/firstname"
        android:layout_alignEnd="@+id/rndButtnMan" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSavePersonalInfo"
        android:textColor="#151515"
        android:background="#a8e8e2"
        android:layout_marginTop="57dp"
        android:layout_below="@+id/edPersonno"
        android:layout_alignParentStart="true" />


<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/radioGroup">

</RadioGroup>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/man"
        android:id="@+id/rndButtnMan"
        android:enabled="true"
        android:layout_below="@+id/textView2"
        android:layout_toEndOf="@+id/rndButtnFemale" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/woman"
        android:id="@+id/rndButtnFemale"
        android:checked="false"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
