<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/exercisesInput"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:hint="@string/inputHeader"
                android:layout_height="wrap_content"
                android:id="@+id/edHeader"
                android:imeOptions="flagNoExtractUi"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/categoryHeader"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/colorSpinner"
                android:entries="@array/category"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/addNumber"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/edRepitions"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/addTime"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/edTime"
                android:singleLine="true"
                android:maxLength="30"
                android:inputType="time" />
        </TableRow>

    </TableLayout>

    <EditText
        android:layout_width="284dp"
        android:layout_height="155dp"
        android:ems="10"
        android:id="@+id/edInstruction"
        android:hint="Instruktion"
        android:layout_weight="3"
        android:layout_gravity="center" />

    <Button
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:text="@string/saveExercis"
        android:id="@+id/btnSave"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="#6fefe0" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:id="@+id/btnFinish"
        android:background="#7ed6d8"
        android:layout_marginTop="30dp" />

</LinearLayout>
